# modern_cpp_OOD

./: README.md
examples/: a.out  inheritance_example.cpp  polymorphism_example.cpp  ptr_dreferencing_example.cpp  static_member_func_example.cpp  virtual_func_example.cpp
homework_7/: CMakeLists.txt
homework_7/include/: bow_dictionary.hpp  compute_sifts.hpp  convert_dataset.hpp  convert_descriptor_to_float_vector.hpp  homework_7.h  kmeans.hpp  kmeans_utils.hpp  serialize.hpp
homework_7/src/: bow_dictionary.cpp  compute_sifts.cpp  convert_dataset.cpp  convert_descriptor_to_float_vector.cpp  kmeans.cpp  kmeans_utils.cpp  main.cpp  main_A_1.cpp  serialize.cpp
